--- a/termux/source.yaml
+++ b/termux/source.yaml
@@ -1,7 +1,192 @@
 # clash格式订阅链接
 - type: clash
   options:
+    url: http://60.205.189.25/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: http://8.136.5.236/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: http://www.fuckgfw.tk/clash/proxies
+    
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://233660.xyz/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://6166888.xyz/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://blog.daodewang.org/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://clashpool.ml/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://ditan.ml/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://emby.luoml.eu.org/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
     url: https://etproxypool.cf/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://fq.lonxin.net/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://free.dswang.ga/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://free.kingfu.cf/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://free.mengbai.cf/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://free886.herokuapp.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://freemby.tk/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://fu.stgod.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://gugb.guanming.xyz/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://hello.stgod.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://hm2019721.ml/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://jiedian.faka77.tk/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://outseen.tk/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxies.bihai.cf/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxy.51798.xyz/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxy.purel.in/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxy.yugogo.xyz/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxypool.fly.dev/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxypool-guest997.herokuapp.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxypoolv2.herokuapp.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxypoolv2.tk/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://resona.top/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://ss.dswang.ga:8443/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://sspool.herokuapp.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://sspool.nl/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://www.linbaoz.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://www.yugogogogo.tk/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://www.zhangyu.ga/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://zz.guicloud.xyz/clash/proxies
 
 # clash格式订阅链接
 - type: clash
