--- a/termux/source.yaml
+++ b/termux/source.yaml
@@ -1,1 +1,84 @@
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://233660.xyz/clash/proxies
 
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://emby.luoml.eu.org/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://etproxypool.cf/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://fq.lonxin.net/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://free.kingfu.cf/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://free886.herokuapp.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://hello.stgod.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://hm2019721.ml/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://jiedian.faka77.tk/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxies.bihai.cf/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxy.yugogo.xyz/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxypool.fly.dev/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://proxypool-guest997.herokuapp.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://ss.dswang.ga:8443/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://sspool.herokuapp.com/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://sspool.nl/clash/proxies
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://etproxypool.ga/clash/proxies
