--- a/termux/source.yaml
+++ b/termux/source.yaml
@@ -77,6 +77,22 @@
 - type: clash
   options:
     url: https://sspool.nl/clash/proxies
+    
+# 翻墙党论坛抓取
+- type: web-fanqiangdang
+  options:
+    url: https://fanqiangdang.com/forum-48-1.html
+    
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://merlinblog.xyz/wiki/freess.html
+    
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ssrList
+    num: 200
 
 # clash格式订阅链接
 - type: clash
